fix : swagger typo
