# SOMS/docs/swagger.json
@@ -18,6 +18,45 @@
     "host": "117.16.136.172:3000",
     "basePath": "/",
     "paths": {
+        "/action/approve/{id}": {
+            "post": {
+                "description": "VM 생성을 승인합니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "vm"
+                ],
+                "summary": "VM 생성 승인",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "VM uuid",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "UUID",
+                        "name": "X-UUID",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.CommonResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/action/hardreboot/{id}": {
             "post": {
                 "description": "VM을 하드 리부팅합니다.",
@@ -1314,45 +1353,6 @@
                         "schema": {
                             "$ref": "#/definitions/vm.CreateVmBody"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "UUID",
-                        "name": "X-UUID",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.CommonResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/vm/approve/{id}": {
-            "post": {
-                "description": "VM 생성을 승인합니다.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "vm"
-                ],
-                "summary": "VM 생성 승인",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "VM uuid",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
                     },
                     {
                         "type": "string",
